tweak grid to fix flexbox items with padding on IE11, add mixin for mobile for better control

--- a/html/themes/custom/common_design_subtheme/sass/_custom.scss
+++ b/html/themes/custom/common_design_subtheme/sass/_custom.scss
@@ -4,8 +4,13 @@
   }
 
   .cd-grid-2-col .cd-grid-item {
+    background-color: transparent;
     margin-bottom: 1rem;
     padding: 2rem;
+
+    @include mobile {
+      display: block;
+    }
 
     @include tablet {
       margin-bottom: 0;
